# fifa-ranks

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  debug.sh  docker-compose.yml  fifa-api.service  fifa-bot.service  fifa-weekly.service  fifa-weekly.timer  init_db.py  pyproject.toml  requirements.txt  setup-ec2.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: __init__.py  seed.py
backend/app/: awards.py  config.py  database.py  main.py  models.py  power_index.py  ranking.py  schemas.py  team_generator.py
backend/app/routers/: chemistry.py  matches.py  pages.py  players.py  power_index.py  rankings.py  team_generator.py
backend/app/static/css/: colors.css  typography.css
backend/app/static/images/: README.md
backend/app/templates/: awards.html  base.html  chemistry.html  home.html  log_match.html  matches.html  player_profile.html  power_index.html  rankings.html  team_generator.html
backend/bot/: __init__.py  formatter.py  handlers.py  main.py  parser.py
backend/static/css/: animations.css  colors.css  typography.css
backend/tests/: __init__.py  test_ranking.py
docs/: fifa-tracker-architecture.drawio  fifa-tracker-overview.html  system-design.md
scripts/: setup-weekly-cron.sh  weekly_rankings_cron.py
